# r3ditor

./: .gitignore  BLENDER-CAD-SKETCHER-PATTERNS.md  CAD-CAM-EDITOR-ARCHITECTURE.md  CAD-PLATFORM-UX-RESEARCH.md  CAD-WORKFLOWS.md  CHAT-SUMMARY.md  CHAT_SUMMARY.md  Cargo.toml  Dockerfile  FREECAD-ALGORITHMS.md  FUSION360-GUI-BEHAVIOR.md  GUI_STACK_TEMPLATE.md  KERNEL-DESIGN-DOCUMENT.md  LICENSE  Makefile  README.md  SALOME-GEOM-ALGORITHMS.md  SALOME-KERNEL-MEDCOUPLING.md  SALOME-PLATFORM-ALGORITHMS.md  build.bat  build.ps1  build_log.txt  build_log2.txt  build_log3.txt  build_output.txt  docker-compose.yml  geometry.py  model_manager.py  model_schema.py  pyproject.toml  requirements.txt  run.py  server.py  solver_bridge.py  start.bat
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/desktop/models/: calicat-calibration.r3d.json  calicat-calibration.stl  callicat.r3d.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/__mocks__/: tauri-api.ts  tauri-plugin.ts
apps/desktop/src/__tests__/: editorStore.test.ts  setup.ts
apps/desktop/src/__tests__/components/: BottomTabBar.test.tsx  BoxSelectionOverlay.test.tsx  CommandPalette.test.tsx  ConfigurationManager.test.tsx  ContextMenu.test.tsx  CustomWorkplanes.test.tsx  DocumentHeader.test.tsx  ExpressionInput.test.tsx  FeatureDialog.test.tsx  FeatureToolbar.test.tsx  FeatureTree.test.tsx  LivePreviewBadge.test.tsx  MarkingMenu.test.tsx  MassProperties.test.tsx  MeasureReadout.test.tsx  NavigationStylePicker.test.ts  NavigationStylePicker.test.tsx  PropertiesPanel.test.tsx  QuickDimension.test.tsx  ScriptConsole.test.tsx  SelectionFilterBar.test.tsx  SketchAnnotations.test.ts  SketchConstraintOverlay.test.tsx  StatusBar.test.tsx  ViewportFeatures.test.ts
apps/desktop/src/__tests__/engine/: expressionEngine.test.ts
apps/desktop/src/__tests__/integration/: callicatGenerateSTL.test.ts  callicatWorkflow.test.ts
apps/desktop/src/__tests__/shortcuts/: registry.test.ts  shortcutConflicts.test.ts
apps/desktop/src/__tests__/sketch/: autoConstraints.test.ts
apps/desktop/src/__tests__/workflows/: caliCatCalibration.test.ts  callicat3dModel.test.ts
apps/desktop/src/api/: tauri.ts
apps/desktop/src/components/: BottomTabBar.tsx  BoxSelectionOverlay.tsx  CommandPalette.tsx  ConfigurationManager.tsx  ContextMenu.tsx  CustomWorkplanes.tsx  DocumentHeader.tsx  EditableDimensionAnnotations.tsx  ExpressionInput.tsx  ExtrudedBodyRenderer.tsx  FeatureDialog.tsx  FeatureToolbar.tsx  FeatureTree.tsx  FinishedSketchOverlay.tsx  LivePreviewBadge.tsx  MarkingMenu.tsx  MassProperties.tsx  MeasureReadout.tsx  NavigationStylePicker.tsx  PropertiesPanel.tsx  QuickDimension.tsx  ScriptConsole.tsx  SectionAnalysis.tsx  SelectionFilterBar.tsx  SketchConstraintGlyphs.tsx  SketchConstraintOverlay.tsx  SketchDimensionAnnotations.tsx  SnapIndicators.tsx  StatusBar.tsx  SubElementPicker.tsx  Toolbar.tsx  ViewCommandHandler.tsx  ViewCube.tsx  Viewport3D.tsx  ViewportNavBar.tsx
apps/desktop/src/engine/: expressionEngine.ts
apps/desktop/src/shortcuts/: registry.ts  useKeyboardShortcuts.ts
apps/desktop/src/sketch/: autoConstraints.ts
apps/desktop/src/store/: editorStore.ts  modelSerializer.ts
apps/desktop/src/utils/: caliCatGeometry.ts  callicatBuilder.ts  callicatSceneBuilder.ts  stlExporter.ts
apps/e2e-tester/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/e2e-tester/tests/: callicat-design.spec.ts
cad_core/: Cargo.toml
cad_core/src/: lib.rs  mesh.rs
cad_core/src/import/: mod.rs  step_import.rs  stl_import.rs
cad_viewer/: Cargo.toml
cad_viewer/src/: app.rs  main.rs
docker/: Dockerfile.api  Dockerfile.worker-analysis  Dockerfile.worker-cad  Dockerfile.worker-cam
docs/: ARCHITECTURE.md  main.typ  template.typ
docs/chapters/: 01-executive-summary.typ  02-architecture-overview.typ  03-cad-kernel.typ  04-cam-engine.typ  05-gpu-renderer.typ  06-editor-shell.typ  07-api-cloud.typ  08-plugin-system.typ  09-data-formats.typ  10-deployment.typ  11-performance.typ  12-migration.typ  13-appendices.typ
migrations/: 001_initial.sql
scripts/: build-installer.ps1  build-installer.sh
shaders/: dfm_viz.wgsl  grid.wgsl  outline.wgsl  pbr.wgsl  toolpath.wgsl
tests/: conftest.py  test_api.py  test_geometry.py  test_solver.py
web/: index.html  main.js
