[package]
name = "cad_viewer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

cad_core = { path = "../cad_core" }

# Fyrox 3D engine
fyrox = "0.36.2"
# Small helpers
crossbeam-channel = "0.5"
